# iRacingAutoReplay

./: CHANGELOG.md  CONTRIBUTING.md  README.md  explore_pyirsdk.py  iRacingReplayDirector.csproj  pyproject.toml
docs/: .gitkeep
iracing_telemetry_analyzer_py/: README.md  pyproject.toml
iracing_telemetry_analyzer_py/src/: app_settings.py  app_state_manager.py  ffmpeg_transcoder.py  iracing_manager.py  main_gui.py  plugin_manager.py  pyirsdk_manager.py  replay_analyzer.py  replay_data.py  utils.py  video_capture_manager.py  video_editing.py
iracing_telemetry_analyzer_py/src/plugins/: __init__.py  simple_timestamp_overlay.py
iracing_telemetry_analyzer_py/src/ui/: __init__.py  main_window.py
iracing_telemetry_analyzer_py/tests/: test_app_settings.py  test_integration_analysis_editing.py  test_integration_plugin_system.py  test_integration_replay_analyzer.py  test_integration_transcoder_setup.py  test_pyirsdk_manager.py  test_replay_data.py
iracing_telemetry_analyzer_py/tests/ui/: test_main_window_settings.py
plugins/JockeOverlays/: JockeOverlays.csproj
plugins/NoOverlay/: NoOverlay.csproj
plugins/iRacingDirector.Plugin.StandardOverlays/: iRacingDirector.Plugin.StandardOverlays.csproj
plugins/iRacingDirector.Plugin.Support/iRacingDirector.Plugin.Support/: iRacingDirector.Plugin.Support.csproj
plugins/iRacingDirector.Plugin.Tester/: iRacingDirector.Plugin.Tester.csproj
src/: app_settings.py  ffmpeg_transcoder.py  iracing_manager.py  irsdk_manager.py  logger_config.py  logging_config.py  main_gui.py  plugin_manager.py  replay_analyzer.py  replay_data.py  utils.py  video_capture_manager.py  video_editing.py
src/plugins/: simple_timestamp_overlay.py
src/ui/: main_window.py
tests/: __init__.py  test_app_settings.py  test_integration_analysis_editing.py  test_integration_plugin_system.py  test_integration_replay_analyzer.py  test_integration_transcoder_setup.py  test_iracing_manager.py  test_main_gui.py  test_pyirsdk_manager.py  test_replay_analyzer.py  test_replay_data.py
tests/ui/: __init__.py  test_main_window_settings.py
