[project]
name = "iracing_telemetry_analyzer"
version = "0.1.0"
description = "iRacing Telemetry Analysis Tool"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"},
]
maintainers = [
    {name = "Your Name", email = "you@example.com"},
]

dependencies = [
    "pyirsdk",                        # For iRacing SDK interaction
    "PyQt6",                          # For the GUI
    # configparser is part of the standard library
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/yourusername/iracing_telemetry_analyzer" # Or specific path to Python project
Documentation = "https://github.com/yourusername/iracing_telemetry_analyzer/blob/main/iracing_telemetry_analyzer_py/docs/README.md"
Repository = "https://github.com/yourusername/iracing_telemetry_analyzer.git" # This is fine if repo hosts multiple projects
Changelog = "https://github.com/yourusername/iracing_telemetry_analyzer/blob/main/iracing_telemetry_analyzer_py/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Example: Basic tool-specific configuration (if any)
# [tool.black]
# line-length = 88
# target-version = ['py38']

# [tool.isort]
# profile = "black"
# line_length = 88
# known_first_party = ["src"]

# [tool.mypy]
# python_version = "3.8"
# warn_return_any = true
# warn_unused_configs = true
# namespace_packages = true
# explicit_package_bases = true
# check_untyped_defs = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# disallow_untyped_decorators = true
# ignore_missing_imports = true # Adjust as per SDK availability
# allow_redefinition = false
# strict_equality = true
# no_implicit_optional = true
# warn_redundant_casts = true
# warn_unused_ignores = true
# # Add paths for mypy to check
# files = ["src", "tests"]

# [[tool.mypy.overrides]]
# module = "PyQt6.*" # Example: ignore missing stubs for PyQt6 if they cause issues
# ignore_missing_imports = true
# [[tool.mypy.overrides]]
# module = "python_iracing_sdk_placeholder.*" # Example: ignore missing stubs for placeholder
# ignore_missing_imports = true
